--- a/index.html
+++ b/index.html
@@ -296,19 +296,19 @@
     <div class="smaller-text"> </div>
 
     <div class="links-container">
-      <a class="link" href="https://t.me/+37-g1v_ueKk0Njhi" target="_blank">
+      <a class="link" href="https://t.me/+Pis6QZNfYNg2MDQy" target="_blank">
         <img src="image/avia.webp" alt="Aviamasters" class="link-icon">
         <div class="link-content">
           MineDrop - Играть в Браузере
         </div>
       </a>
-      <a class="link" href="https://t.me/+37-g1v_ueKk0Njhi">
+      <a class="link" href="https://t.me/+Pis6QZNfYNg2MDQy">
         <img src="image/tg.jpg" alt="Telegram" class="link-icon">
         <div class="link-content">
           MineDrop - Играть в Telegram  
         </div>
       </a>
-      <a class="link" href="https://t.me/+37-g1v_ueKk0Njhi" target="_blank">
+      <a class="link" href="https://t.me/+Pis6QZNfYNg2MDQy" target="_blank">
         <img src="image/tg.jpg" alt="Telegram" class="link-icon">
         <div class="link-content">
           Telegram-канал | Конкурсы 
@@ -318,3 +318,4 @@
   </div>
 </body>
 </html>
+
