--- a/index.html
+++ b/index.html
@@ -296,19 +296,19 @@
     <div class="smaller-text"> </div>
 
     <div class="links-container">
-      <a class="link" href="https://t.me/+Pis6QZNfYNg2MDQy" target="_blank">
+      <a class="link" href="https://lbgame777.xyz/7EB22t" target="_blank">
         <img src="image/avia.webp" alt="Aviamasters" class="link-icon">
         <div class="link-content">
-          MineDrop - Играть в Браузере
+          Aviamaster - Играть в Браузере
         </div>
       </a>
-      <a class="link" href="https://t.me/+Pis6QZNfYNg2MDQy">
+      <a class="link" href="https://t.me/C_Treasure_Bot/app?startapp=bXN0PTB4MjYzMjQyMTYmbT1TZW5rdSZjPUFWSUFNRA">
         <img src="image/tg.jpg" alt="Telegram" class="link-icon">
         <div class="link-content">
-          MineDrop - Играть в Telegram  
+          Aviamaster - Играть в Telegram  
         </div>
       </a>
-      <a class="link" href="https://t.me/+Pis6QZNfYNg2MDQy" target="_blank">
+      <a class="link" href="https://t.me/+BniZTNwdZt83YTYy" target="_blank">
         <img src="image/tg.jpg" alt="Telegram" class="link-icon">
         <div class="link-content">
           Telegram-канал | Конкурсы 
@@ -318,4 +318,3 @@
   </div>
 </body>
 </html>
-
